db scheme fixed